--- a/demo-spring/src/main/resources/application.properties
+++ b/demo-spring/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # Conexión a MySQL
 spring.datasource.url=jdbc:mysql://localhost:3306/empresa
 spring.datasource.username=root
-spring.datasource.password=Micr1981+
+spring.datasource.password= aqui tu contraseña
 
 # JPA / Hibernate
 spring.jpa.hibernate.ddl-auto=validate
